--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -45,6 +45,15 @@ h4 {
   font-size: 18px;
 }
 
+button,
+input,
+.btn,
+a.btn {
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  color: white;
+}
+
 .btn {
   font-weight: bold;
 }
@@ -52,6 +61,10 @@ h4 {
 .btn-danger {
   background-color: #dd5638;
   border-color: #d95131;
+}
+
+img {
+  max-width: 100%;
 }
 
 /* === HERO === */
@@ -120,4 +133,19 @@ h4 {
   color: white;
   font-weight: bold;
   display: block;
+}
+
+/* === LAYOUT === */
+
+#optin {
+  background: #3e4249;
+  padding: 20px 0;
+  color: white;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  font-size: 1.2em;
+}
+
+#optin p {
+  margin: 7px 0 0 0;
 }
