--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -45,6 +45,14 @@ h4 {
   font-size: 18px;
 }
 
+p {
+  margin: 0 0 15px;
+}
+
+p.lead {
+  font-weight: normal;
+}
+
 a:link,
 a:visited {
   color: #dd5638;
@@ -208,6 +216,10 @@ blockquote:before {
 }
 
 /* === LAYOUT === */
+/* .row looks for element that comes immediately after it, and that element is .row */
+.row + .row {
+  margin-top: 20px;
+}
 
 section {
   padding: 80px 0;
@@ -389,4 +401,39 @@ i.ci {
 
 .ci.ci-device {
   background-position: -200px 0;
+}
+
+/* === MEDIA QUERIES === */
+
+@media screen and(max-width: 991px) {
+  #instructor .container {
+    background: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .logo {
+    width: 50%;
+  }
+
+  #optin p {
+    margin: 0 0 10px;
+  }
+
+  #featurette iframe {
+    height: 240px;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  #instructor .num {
+    height: 100px;
+    width: 100px;
+    font-size: 22px;
+  }
+
+  #instructor .num span {
+    font-size: 16px;
+  }
 }
